2000-02-21  Matt Loper  <matt@helixcode.com>

	* tests/Makefile.am: changed references to libibex.a to
	libibex.la.

	* libical/src/libical/.cvsignore: Added *.lo, *.la, and .libs.
	* libical/src/libicalss/.cvsignore: same.

	* tests/.cvsignore: Added test11.

	* libical/Makefile.in: autogenerated file removed from cvs, and
	added to .cvsignore.
	* libical/src/Makefile.in: same.
	* libical/src/libical/Makefile.in: same.
	* libical/src/libicalss/Makefile.in: same.

2000-02-22  bertrand  <Bertrand.Guiheneuf@aful.org>

	* tests/ui-tests/message-browser.c (on_link_clicked): 
	uggly hack to test part saving and
	b64 streams.

2000-02-21  Dan Winship  <danw@helixcode.com>

	* tests/test10.c:
	* tests/test11.c: update for camel changes

2000-02-20  Matt Loper  <matt@helixcode.com>

	* tests/Makefile.am: Changed dependencies on libibex.la to
	libibex.a. In test9_LDADD, placed libcamelmbox.la before
	libibex.la, as the former requires the latter.

2000-02-20  Damon Chaplin  <damon@helixcode.com>

	* widgets/shortcut-bar/Makefile.am: added libetext.a and libeutil.a
	to test_shortcut_bar_LDADD, and got rid of e-icon-bar-text-item.[hc].
	I'll delete these soon.

	* widgets/shortcut-bar/e-icon-bar.c: changed to be a subclass of
	ECanvas and to use EText instead of EIconBarTextItem. Also set
	"width_set" & "height_set" of the GnomeCanvasPixbuf items so they
	work in the "Small Icon" view.

	* widgets/shortcut-bar/e-vscrolled-bar.c: use map/unmap instead of
	show/hide for the up & down buttons to avoid queueing resizes.
	Otherwise the scrolling starts off a bit jerky.

	* widgets/shortcut-bar/test-shortcut-bar.c: output a message when the
	main label is resized, just for info.

	* widgets/shortcut-bar/*.[hc]: updated my email address.

2000-02-20  Iain Holmes  <ih@csd.abdn.ac.uk>

	* widgets/e-text/e-text.[ch] (_do_tooltip): Show the text of the item,
	in a tooltip style.
	(e_text_event): Add a timeout on the Enter and remove it on the Leave
	events.
